# OpenGL-game-template

./: CMakeLists.txt
data/shaders/: batch_shader.frag  batch_shader.vert  text_shader.frag  text_shader.vert
src/: game.cpp  game.hpp  main.cpp  type.hpp
src/video/: camera.cpp  camera.hpp  shader.cpp  shader.hpp  sprite_batch.cpp  sprite_batch.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
